--- a/static/style.css
+++ b/static/style.css
@@ -55,8 +55,13 @@ button:hover {
     background-color: #2980b9;
 }
 
+button[disabled] {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
 
-#output {
+
+.flex_row_center {
     display: flex;
     width: 100%;
     height: 100px;
@@ -65,36 +70,74 @@ button:hover {
     gap: 5%;
 }
 
-#output img {
+.flex_row_center img {
     display: block;
     height: 100%;
     width: auto;
 }
 
+/*=====Modal window set up=========*/
 
-/* Стиль для таблицы */
-table {
-    border-collapse: collapse; /* Объединение границ */
+.modal {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
-/* Стиль для заголовков таблицы */
-table th {
-    background-color: blue; /* Голубой цвет фона для th */
-    color: white; /* Белый цвет текста */
-    font-weight: bold; /* Жирное начертание текста */
-    border: 2px solid grey; /* Границы с серым цветом и толщиной в 2px */
-    white-space: pre-wrap; /* Перенос контента по строкам */
-    word-wrap: break-word; /* Дополнительное свойство для переноса слов */
+.modal-content {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    padding: 20px;
+    background-color: #fff;
+    width: 80%;
+    max-height: 80%;
+    border-radius: 20px;
+    overflow: hidden; 
 }
 
-/* Стиль для ячеек таблицы */
-table td {
-    border: 2px solid grey; /* Границы с серым цветом и толщиной в 2px */
-    white-space: pre-wrap; /* Перенос контента по строкам */
-    word-wrap: break-word; /* Дополнительное свойство для переноса слов */
+.modal-scrollable {
+    width: 100%;
+    height: 100%;
+    max-height: 70vh;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
-/* Стиль для установки одинаковой ширины ячеек */
-table th, table td {
-    width: calc(100% / n); /* Где n - количество ячеек. Например, если у вас 5 ячеек, используйте calc(100% / 5) */
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
 }
+
+/*==========CsvTable set up===========*/
+
+#csvTable {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: auto; /* Это позволит ширине столбцов подстраиваться под длину контента */
+}
+
+#csvTable th, 
+#csvTable td {
+    border: 1px solid #e0e0e0; /* Серый цвет для границ */
+    padding: 8px 12px; /* Отступы внутри ячеек */
+    text-align: left; /* Выравнивание текста */
+}
+
+#csvTable th {
+    background-color: #f5f5f5; /* Светло-серый цвет для заголовков */
+    color: #333; /* Цвет текста заголовков */
+    font-weight: 500; /* Жирность текста */
+}
+
+#csvTable tbody tr:hover {
+    background-color: #f7f7f7; /* Цвет фона при наведении */
+}
+
