--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <title>Generate Data</title>
     <link rel="stylesheet" href="/static/style.css?v=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="/static/preview_data.js?v=1.0" defer></script>
+    <script src="/static/reset_data.js?v=1.0" defer></script>
     <script src="/static/handleGeneratedUrl.js?v=1.0" defer></script>
     <script src="/static/script.js?v=1.3" defer></script>
 </head>
@@ -15,7 +17,12 @@
         {% include 'models_include.html' %}
         {% include 'type_of_files.html' %}
     </div>
-    <button type="button" onclick="generateData()">Generate Data</button>
-    <div id="output"></div>
+    <div class="flex_row_center">
+    <button id="gen_data" type="button" onclick="generateData()">Generate data</button>
+    <button id="res_data" type="button" onclick="resetData()" disabled>Reset data</button>
+    <button id="previw_data" type="button" onclick="previewData()" disabled>Preview data (CSV only)</button>
+    </div>
+    <div class="flex_row_center" id="output"></div>
+    {% include 'preview_data.html' %}
 </body>
 </html>
